tests/fixtures/invalid/pow_set_list_bool.py
# Cannot call pow() with Set[int], List[int], Bool
x = pow({1, 2, 3}, [1, 2, 3], True)
